--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "cool-ascii-faces": "~1.3.x",
     "director": "",
-    "cool-ascii-faces": "~1.3.x"
+    "groupme": "^0.5.7",
+    "request": "^2.79.0"
   },
   "engines": {
     "node": "0.10.x"
