--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "snoowrap": "^1.12.0"
   },
   "engines": {
-    "node": "0.10.x"
+    "node": "7.4.0"
   },
   "repository": {
     "type": "git",
