Change app name

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "node-js-getting-started",
-  "version": "0.1.2",
-  "description": "A sample Node.js app using Express 4",
+  "name": "groupmeme-bot",
+  "version": "0.1.0",
+  "description": "The GroupMe bot with the dankest memes",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
@@ -18,12 +18,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/heroku/node-js-getting-started"
+    "url": "https://github.com/simonbilskyrollins/groupmeme-bot"
   },
   "keywords": [
     "node",
     "heroku",
-    "express"
+    "groupme"
   ],
   "license": "MIT"
 }
