--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "^1.16.0",
     "express": "^4.14.1",
     "groupme": "^0.5.7",
+    "pug": "^2.0.0-beta10",
     "request": "^2.79.0",
     "snoowrap": "^1.12.0"
   },
