--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "The GroupMe bot with the dankest memes",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "test": "standard"
   },
   "dependencies": {
     "body-parser": "^1.16.0",
@@ -12,7 +13,8 @@
     "groupme": "^0.5.7",
     "pug": "^2.0.0-beta10",
     "request": "^2.79.0",
-    "snoowrap": "^1.12.0"
+    "snoowrap": "^1.12.0",
+    "standard": "^8.6.0"
   },
   "engines": {
     "node": "7.4.0",
