--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "director": "",
     "groupme": "^0.5.7",
     "request": "^2.79.0",
-    "snoowrap": "^1.12.0"
+    "snoowrap": "^1.12.0",
+    "pg": "4.x"
   },
   "engines": {
     "node": "7.4.0",
