--- a/package.json
+++ b/package.json
@@ -30,5 +30,10 @@
     "heroku",
     "groupme"
   ],
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "chai-http": "^3.0.0",
+    "mocha": "^3.2.0"
+  }
 }
