--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "standard"
+    "test": "standard && mocha"
   },
   "dependencies": {
     "body-parser": "^1.16.0",
@@ -14,8 +14,7 @@
     "pug": "^2.0.0-beta10",
     "request": "^2.79.0",
     "snoowrap": "^1.12.0",
-    "pg": "4.x",
-    "standard": "^8.6.0"
+    "pg": "4.x"
   },
   "engines": {
     "node": "7.4.0",
@@ -32,8 +31,14 @@
   ],
   "license": "MIT",
   "devDependencies": {
+    "standard": "^8.6.0",
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
     "mocha": "^3.2.0"
+  },
+  "standard": {
+    "ignore": [
+      "test.js"
+    ]
   }
 }
