--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,17 @@ node_js:
   - 6.11.1
 env:
   - CXX=g++-4.8
+  - DATABASE_URL="postgres://postgres@localhost/test"
 addons:
   apt:
     sources:
       - ubuntu-toolchain-r-test
     packages:
       - g++-4.8
+services:
+  - postgresql
+before_script:
+  - psql -c 'create database test;' -U postgres
 after_success:
   - npm run coveralls
 deploy:
