--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,9 @@ language: node_js
 node_js:
   - 6.11.1
 env:
-  - CXX=g++-4.8
-  - DATABASE_URL="postgres://postgres@localhost/test"
+  global:
+    - CXX=g++-4.8
+    - DATABASE_URL="postgres://postgres@localhost/test"
 addons:
   apt:
     sources:
