--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "standard && mocha",
+    "lint": "standard --verbose | snazzy",
+    "test": "npm run lint && mocha",
     "cover": "istanbul cover _mocha",
     "coveralls": "istanbul cover _mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
   },
@@ -17,7 +18,7 @@
     "pug": "^2.0.0-beta10",
     "request": "^2.79.0",
     "snoowrap": "^1.12.0",
-    "syllable": "2.2.0"
+    "syllable": "^2.2.0"
   },
   "engines": {
     "node": "6.11.1"
@@ -39,11 +40,14 @@
     "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
     "mocha-lcov-reporter": "^1.3.0",
+    "pre-commit": "^1.2.2",
+    "snazzy": "^7.0.0",
     "standard": "^8.6.0"
   },
   "standard": {
     "ignore": [
       "test.js"
     ]
-  }
+  },
+  "pre-commit": "lint"
 }
